# explorer

./: CMakeLists.txt  README.md  explorer.cc
examples/: a.json  a.txt  a.xml  not_json.json
